--- a/printf/Makefile
+++ b/printf/Makefile
@@ -81,7 +81,7 @@ test: all
 	@./$(TEST_EXEC)
 
 ################################################################################
-# 						Test Targets by @alelievr	 						   #
+# 						Auto Targets 				 						   #
 ################################################################################
 
 $(OBJDIR)/%.o: $(SRCDIR)/%.c | $(OBJDIR)
